<resources>
    <string name="app_name">Arimac News App</string>
    <string name="no_data">No Data</string>
    <string name="search_by_name">Search by name</string>
    <string name="title_activity_login">Login</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_register">Register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >4 characters</string>
    <string name="invalid_username_and_password">please check your username and password</string>
    <string name="network_error">Network error, could get data,please try again!</string>
    <string name="no_internet">Please check your internet connection</string>
    <string name="search_error">there are no news</string>


</resources>